# PythonQtConv

./: CMakeLists.txt
src/: PythonQtConversion.cpp  PythonQtConversion.h  PythonQtPythonInclude.h
